<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:textAlignment="center"
    android:background="@drawable/dining"
    tools:context=".home">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="387dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@color/white"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="282dp">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@color/lavender"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#616161" />

            <EditText
                android:id="@+id/password"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@color/lavender"
                android:drawablePadding="8dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#616161" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/loginbutton"
                android:textSize="18sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>